@@ -36,6 +36,8 @@ Version 1.7.0-svn:
    * Added ability to load maps referenced in scenario files
    * Added ability to work with maps embedded in scenario files (saving works 
      in a limited scope)
+   * Moved the clipboard actions to a context menu available in paste mode
+   * Added a terrain sampler feature -- ctrl+click when in paint or fill mode 
  * FormulaAI:
    * Fixed bug #13230: added debug_float FormulaAI function to allow debugging
      via floating popups on the specified hex
